--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,10 +46,22 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
+      - name: Zip common_utils.py
+        working-directory: etl_script
+        run: zip -r ../common_utils.zip common_utils.py
+
+      - name: Upload scripts and dependencies to S3
+        run: |
+          aws s3 cp etl_script/01_bronze_events.py s3://postnl-case-study/etl_script/01_bronze_events.py
+          aws s3 cp common_utils.zip s3://postnl-case-study/etl_script/common_utils.zip
+
       - name: Initialize Terraform
         working-directory: ./terraform
         run: terraform init
 
       - name: Apply Terraform
         working-directory: ./terraform
+        env:
+          TF_VAR_bronze_script_location: "s3://postnl-case-study/etl_script/01_bronze_events.py"
+          TF_VAR_common_utils_location: "s3://postnl-case-study/etl_script/common_utils.zip"
         run: terraform apply -auto-approve -input=false
