--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,10 +50,15 @@ jobs:
         working-directory: etl_script
         run: zip -r ../common_utils.zip common_utils.py
 
+      - name: Zip Lambda
+        working-directory: lambda
+        run: zip -r ../lambda_slack_message.zip lambda_slack_message.py
+
       - name: Upload scripts and dependencies to S3
         run: |
           aws s3 cp etl_script/01_bronze_events.py s3://postnl-case-study/etl_script/01_bronze_events.py
           aws s3 cp common_utils.zip s3://postnl-case-study/etl_script/common_utils.zip
+          aws s3 cp lambda_slack_message.zip s3://postnl-case-study/lambda/lambda_slack_message.zip
 
       - name: Initialize Terraform
         working-directory: ./terraform
@@ -64,4 +69,5 @@ jobs:
         env:
           TF_VAR_bronze_script_location: "s3://postnl-case-study/etl_script/01_bronze_events.py"
           TF_VAR_common_utils_location: "s3://postnl-case-study/etl_script/common_utils.zip"
+          TF_VAR_common_utils_location: "s3://postnl-case-study/lambda/lambda_slack_message.zip"
         run: terraform apply -auto-approve -input=false
