--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,4 +70,5 @@ jobs:
           TF_VAR_bronze_script_location: "s3://postnl-case-study/etl_script/01_bronze_events.py"
           TF_VAR_common_utils_location: "s3://postnl-case-study/etl_script/common_utils.zip"
           TF_VAR_lambda_script_location: "s3://postnl-case-study/lambda/lambda_slack_message.zip"
+          TF_VAR__slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: terraform apply -auto-approve -input=false
