--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Zip Lambda
         working-directory: lambda
-        run: zip -r ../lambda_slack_message.zip lambda_slack_message.py
+        run: zip -r lambda_slack_message.zip lambda/lambda_slack_message.py
 
       - name: Upload scripts and dependencies to S3
         run: |
@@ -68,6 +68,6 @@ jobs:
         env:
           TF_VAR_bronze_script_location: "s3://postnl-case-study/etl_script/01_bronze_events.py"
           TF_VAR_common_utils_location: "s3://postnl-case-study/etl_script/common_utils.zip"
-          TF_VAR_lambda_script_location: "s3://postnl-case-study/lambda/lambda_slack_message.zip"
+          TF_VAR_lambda_script_location: "./lambda_slack_message.zip"
           TF_VAR_slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: terraform apply -auto-approve -input=false
